Proof of concept file read/write/delete via api.

--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="#" />
 	<title>Document</title>
-	<script src="main.js"></script>
+	<script src="client.js"></script>
 </head>
 <body>
-	<input class="inputBox" type="text"></input>
+	<div>
+		Data: <input class="inputData" type="text" value="abc"></input>
+	</div>
+	<div>
+		Wins: <input class="inputWins" type="text" value="65"></input>
+	</div>
+	<div>
+		Loses: <input class="inputLoses" type="text" value="45"></input>
+	</div>
 	<button class="saveButton">Save</button>
 	<button class="loadButton">Load</button>
 	<div class="outputDiv"></div>
+	<div>
+		File: <input class="inputFile" type="text"></input>
+		<button class="deleteButton">Delete</button>
+	</div>
 </body>
 </html>
 
