Renaming saveButton to postButton.

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 	<div>
 		Loses: <input class="inputLoses" type="text" value="45"></input>
 	</div>
-	<button class="saveButton">Save</button>
+	<button class="postButton">Post</button>
 	<button class="loadButton">Load</button>
 	<div class="outputDiv"></div>
 	<div>
