Switched to mongodb (wrapped in mongoose) instead of saving data on the server as files.

--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,15 @@
 	<div>
 		Loses: <input class="inputLoses" type="text" value="45"></input>
 	</div>
-	<button class="postButton">Post</button>
-	<button class="loadButton">Load</button>
-	<div class="outputDiv"></div>
 	<div>
-		File: <input class="inputFile" type="text"></input>
+		<button class="postButton">Post</button>
+		<button class="loadButton">Load</button>
+	</div>
+	<br/>
+	<div class="outputDiv"></div>
+	<br/>
+	<div>
+		Id: <input class="inputId" type="text"></input>
 		<button class="deleteButton">Delete</button>
 	</div>
 </body>
