More da testing (temporary).

--- a/public/da.html
+++ b/public/da.html
@@ -304,6 +304,7 @@ jQuery(function($){
     }
     .et_pb_top_inside_divider {
         border: 1px solid orange;
+        z-index: 10000 !important;
     }
 </style>
 </head>
