--- a/public/da.html
+++ b/public/da.html
@@ -306,6 +306,12 @@ jQuery(function($){
         border: 1px solid orange;
         z-index: 10000 !important;
     }
+    .et_builder_inner_content div.et_pb_section.et_pb_section_11 {
+        background-image: none !important;
+    }
+    .et_builder_inner_content {
+        background-color: teal !important;
+    }
 </style>
 </head>
 <body class="page-template-default page page-id-4278 page-parent custom-background theme-Divi woocommerce-js et_monarch et_button_no_icon et_pb_button_helper_class et_fixed_nav et_show_nav et_primary_nav_dropdown_animation_fade et_secondary_nav_dropdown_animation_fade et_header_style_left et_pb_footer_columns4 et_cover_background osx et_pb_gutters3 et_pb_pagebuilder_layout et_right_sidebar et_divi_theme et-db et_minified_js et_minified_css chrome">
