More da testing (temporary).

--- a/public/da.html
+++ b/public/da.html
@@ -310,7 +310,7 @@ jQuery(function($){
         background-image: none !important;
     }
     .et_builder_inner_content {
-        background-color: transparent !important;
+        /* background-color: transparent !important; */
     }
     .et-l--post {
         background-color: gray;
