More da testing (temporary).

--- a/public/da.html
+++ b/public/da.html
@@ -307,7 +307,7 @@ jQuery(function($){
         z-index: 10000 !important;
     }
     .et_builder_inner_content div.et_pb_section.et_pb_section_11 {
-        background-image: none !important;
+        /* background-image: none !important; */
     }
     .et_builder_inner_content {
         /* background-color: transparent !important; */
