More da testing (temporary).

--- a/public/da.html
+++ b/public/da.html
@@ -308,6 +308,7 @@ jQuery(function($){
     }
     .et_builder_inner_content div.et_pb_section.et_pb_section_11 {
         /* background-image: none !important; */
+        opacity: 0.75;
     }
     .et_builder_inner_content {
         /* background-color: transparent !important; */
