More da testing (temporary).

--- a/public/da.html
+++ b/public/da.html
@@ -308,13 +308,16 @@ jQuery(function($){
     }
     .et_builder_inner_content div.et_pb_section.et_pb_section_11 {
         /* background-image: none !important; */
-        opacity: 0.75;
     }
     .et_builder_inner_content {
         /* background-color: transparent !important; */
     }
     .et-l--post {
         background-color: gray;
+    }
+    #prod-cat-section-container div.et_pb_top_inside_divider {
+        z-index: 5 !important;
+        position: absolute;
     }
 </style>
 </head>
