--- a/public/da.html
+++ b/public/da.html
@@ -319,6 +319,9 @@ jQuery(function($){
         z-index: 5 !important;
         position: absolute;
     }
+    .et_pb_row.et_pb_row_13, .et_pb_section_12, .et_pb_section_13, .et_pb_section_14 {
+        display: none;
+    }
 </style>
 </head>
 <body class="page-template-default page page-id-4278 page-parent custom-background theme-Divi woocommerce-js et_monarch et_button_no_icon et_pb_button_helper_class et_fixed_nav et_show_nav et_primary_nav_dropdown_animation_fade et_secondary_nav_dropdown_animation_fade et_header_style_left et_pb_footer_columns4 et_cover_background osx et_pb_gutters3 et_pb_pagebuilder_layout et_right_sidebar et_divi_theme et-db et_minified_js et_minified_css chrome">
