--- a/public/da.html
+++ b/public/da.html
@@ -295,6 +295,19 @@
 		<link rel="stylesheet" id="et-divi-customizer-global-cached-inline-styles" href="./Products - Digital Ambiance_files/et-divi-customizer-global-15925992538354.min.css" onerror="et_core_page_resource_fallback(this, true)" onload="et_core_page_resource_fallback(this)">
 		<style>[data-columns]::before{visibility:hidden;position:absolute;font-size:1px;}</style>
 		<style id="fit-vids-style">.fluid-width-video-wrapper{width:100%;position:relative;padding:0;}.fluid-width-video-wrapper iframe,.fluid-width-video-wrapper object,.fluid-width-video-wrapper embed {position:absolute;top:0;left:0;width:100%;height:100%;}</style>
+
+		<style type="text/css">
+			.et_pb_bottom_inside_divider {
+				border: 3px solid red;
+			}
+
+			#prod-cat-section-container {
+				border: 2px solid green;
+			}
+			.et_pb_top_inside_divider {
+				border: 1px solid orange;
+			}
+		</style>
 	</head>
 	<body class="page-template-default page page-id-4278 page-parent custom-background theme-Divi woocommerce-js et_monarch et_button_no_icon et_pb_button_helper_class et_fixed_nav et_show_nav et_primary_nav_dropdown_animation_fade et_secondary_nav_dropdown_animation_fade et_header_style_left et_pb_footer_columns4 et_cover_background osx et_pb_gutters3 et_pb_pagebuilder_layout et_right_sidebar et_divi_theme et-db et_minified_js et_minified_css chrome">
 		<div id="page-container" style="padding-top: 147px;">
