More da testing (temporary).

--- a/public/da.html
+++ b/public/da.html
@@ -36,7 +36,57 @@
 	</head>
 	<body class="page-template-default page page-id-4278 page-parent custom-background theme-Divi woocommerce-js et_monarch et_button_no_icon et_pb_button_helper_class et_fixed_nav et_show_nav et_primary_nav_dropdown_animation_fade et_secondary_nav_dropdown_animation_fade et_header_style_left et_pb_footer_columns4 et_cover_background osx et_pb_gutters3 et_pb_pagebuilder_layout et_right_sidebar et_divi_theme et-db et_minified_js et_minified_css chrome">
 		<div id="page-container" style="padding-top: 147px;">
-			
+			<header id="main-header" data-height-onload="147" data-height-loaded="true" data-fixed-height-onload="147" style="top: 0px;">
+				<div class="container clearfix et_menu_container">
+					<div class="logo_container">
+						<span class="logo_helper"></span>
+						<a href="https://www.digitalambiance.com/">
+						<img src="./Products - Digital Ambiance_files/digital-ambiance-logo-244x74.png" alt="Digital Ambiance" id="logo" data-height-percentage="80" data-actual-width="244" data-actual-height="74">
+						</a>
+					</div>
+					<div id="et-top-navigation" data-height="120" data-fixed-height="120" style="padding-left: 274px;">
+						<nav id="top-menu-nav">
+							<ul id="top-menu" class="nav">
+								<li id="menu-item-1927" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1927"><a href="https://www.digitalambiance.com/our-work/">Portfolio</a></li>
+								<li id="menu-item-1897" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1897"><a href="https://www.digitalambiance.com/about/">About</a></li>
+								<li id="menu-item-5525" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5525"><a href="https://www.digitalambiance.com/luminous-arts/">Podcast</a></li>
+								<li id="menu-item-2052" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2052"><a href="https://www.digitalambiance.com/blog/">Blog</a></li>
+								<li id="menu-item-1925" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1925"><a href="https://www.digitalambiance.com/contact/">Contact</a></li>
+								<li id="menu-item-2333" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2333"><a href="https://www.digitalambiance.com/clients/">Client Login</a></li>
+								<li class="menu-item wpmenucartli wpmenucart-display-standard menu-item menu-item-type-post_type menu-item-object-page empty-wpmenucart" id="wpmenucartli"><a class="wpmenucart-contents empty-wpmenucart" style="display:none">&nbsp;</a></li>
+							</ul>
+						</nav>
+						<a href="https://www.digitalambiance.com/cart/" class="et-cart-info">
+						<span></span>
+						</a>
+						<div id="et_mobile_nav_menu">
+							<div class="mobile_nav closed">
+								<span class="select_page">Select Page</span>
+								<span class="mobile_menu_bar mobile_menu_bar_toggle"></span>
+								<ul id="mobile_menu" class="et_mobile_menu">
+									<li id="menu-item-1927" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1927 et_first_mobile_item"><a href="https://www.digitalambiance.com/our-work/">Portfolio</a></li>
+									<li id="menu-item-1897" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1897"><a href="https://www.digitalambiance.com/about/">About</a></li>
+									<li id="menu-item-5525" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-5525"><a href="https://www.digitalambiance.com/luminous-arts/">Podcast</a></li>
+									<li id="menu-item-2052" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2052"><a href="https://www.digitalambiance.com/blog/">Blog</a></li>
+									<li id="menu-item-1925" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1925"><a href="https://www.digitalambiance.com/contact/">Contact</a></li>
+									<li id="menu-item-2333" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2333"><a href="https://www.digitalambiance.com/clients/">Client Login</a></li>
+									<li class="menu-item wpmenucartli wpmenucart-display-standard menu-item menu-item-type-post_type menu-item-object-page empty-wpmenucart" id="wpmenucartli"><a class="wpmenucart-contents empty-wpmenucart" style="display:none">&nbsp;</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<!-- #et-top-navigation -->
+				</div>
+				<!-- .container -->
+				<div class="et_search_outer">
+					<div class="container et_search_form_container">
+						<form role="search" method="get" class="et-search-form" action="https://www.digitalambiance.com/">
+							<input type="search" class="et-search-field" placeholder="Search …" value="" name="s" title="Search for:">					
+						</form>
+						<span class="et_close_search_field"></span>
+					</div>
+				</div>
+			</header>
 			<!-- #main-header -->
 			<div id="et-main-area">
 				<div id="main-content">
