--- a/public/da.html
+++ b/public/da.html
@@ -29,7 +29,7 @@
 
 
 		
-		<style type="text/css" id="et-social-custom-css"></style>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		
 		
 
