--- a/public/da.html
+++ b/public/da.html
@@ -29,7 +29,10 @@
 
 
 		
-		<meta name="viewport" content="">
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
+		<!-- fix <meta name="viewport" content=""> -->
+		<!-- bug <meta name="viewport" content="width=device-width"> -->
+		<meta name="viewport" content="initial-scale=1.0">
 		
 		
 
