More da testing (temporary).

--- a/public/da.html
+++ b/public/da.html
@@ -32,7 +32,8 @@
 		<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
 		<!-- fix <meta name="viewport" content=""> -->
 		<!-- bug <meta name="viewport" content="width=device-width"> -->
-		<meta name="viewport" content="initial-scale=1.0">
+		<!-- bug <meta name="viewport" content="initial-scale=1.0"> -->
+		<meta name="viewport" content="maximum-scale=1.0">
 		
 		
 
