--- a/public/da.html
+++ b/public/da.html
@@ -33,7 +33,8 @@
 		<!-- fix <meta name="viewport" content=""> -->
 		<!-- bug <meta name="viewport" content="width=device-width"> -->
 		<!-- bug <meta name="viewport" content="initial-scale=1.0"> -->
-		<meta name="viewport" content="maximum-scale=1.0">
+		<!-- fix <meta name="viewport" content="maximum-scale=1.0"> -->
+		<meta name="viewport" content="user-scalable=0">
 		
 		
 
