--- a/public/da.html
+++ b/public/da.html
@@ -1414,6 +1414,73 @@
 				margin-right: auto!important
 			}
 
+			@media only screen and (min-width:981px) {
+				.et_pb_row_0,
+				body #page-container .et-db #et-boc .et-l .et_pb_row_0.et_pb_row,
+				body.et_pb_pagebuilder_layout.single #page-container #et-boc .et-l .et_pb_row_0.et_pb_row,
+				body.et_pb_pagebuilder_layout.single.et_full_width_page #page-container #et-boc .et-l .et_pb_row_0.et_pb_row {
+					max-width: 1377px
+				}
+				.et_pb_row_6,
+				body #page-container .et-db #et-boc .et-l .et_pb_row_6.et_pb_row,
+				body.et_pb_pagebuilder_layout.single #page-container #et-boc .et-l .et_pb_row_6.et_pb_row,
+				body.et_pb_pagebuilder_layout.single.et_full_width_page #page-container #et-boc .et-l .et_pb_row_6.et_pb_row {
+					max-width: 1377px
+				}
+				.et_pb_row_12,
+				body #page-container .et-db #et-boc .et-l .et_pb_row_12.et_pb_row,
+				body.et_pb_pagebuilder_layout.single #page-container #et-boc .et-l .et_pb_row_12.et_pb_row,
+				body.et_pb_pagebuilder_layout.single.et_full_width_page #page-container #et-boc .et-l .et_pb_row_12.et_pb_row {
+					max-width: 1377px
+				}
+				.et_pb_row_18,
+				body #page-container .et-db #et-boc .et-l .et_pb_row_18.et_pb_row,
+				body.et_pb_pagebuilder_layout.single #page-container #et-boc .et-l .et_pb_row_18.et_pb_row,
+				body.et_pb_pagebuilder_layout.single.et_full_width_page #page-container #et-boc .et-l .et_pb_row_18.et_pb_row {
+					max-width: 1377px
+				}
+				.et_pb_section_1 {
+					width: 100%;
+					max-width: 100%
+				}
+				.et_pb_section_6 {
+					width: 100%;
+					max-width: 100%
+				}
+				.et_pb_section_11 {
+					width: 100%;
+					max-width: 100%
+				}
+				.et_pb_section_16 {
+					width: 100%;
+					max-width: 100%
+				}
+				.et_pb_row_1,
+				body #page-container .et-db #et-boc .et-l .et_pb_row_1.et_pb_row,
+				body.et_pb_pagebuilder_layout.single #page-container #et-boc .et-l .et_pb_row_1.et_pb_row,
+				body.et_pb_pagebuilder_layout.single.et_full_width_page #page-container #et-boc .et-l .et_pb_row_1.et_pb_row {
+					max-width: 82%
+				}
+				.et_pb_row_7,
+				body #page-container .et-db #et-boc .et-l .et_pb_row_7.et_pb_row,
+				body.et_pb_pagebuilder_layout.single #page-container #et-boc .et-l .et_pb_row_7.et_pb_row,
+				body.et_pb_pagebuilder_layout.single.et_full_width_page #page-container #et-boc .et-l .et_pb_row_7.et_pb_row {
+					max-width: 82%
+				}
+				.et_pb_row_13,
+				body #page-container .et-db #et-boc .et-l .et_pb_row_13.et_pb_row,
+				body.et_pb_pagebuilder_layout.single #page-container #et-boc .et-l .et_pb_row_13.et_pb_row,
+				body.et_pb_pagebuilder_layout.single.et_full_width_page #page-container #et-boc .et-l .et_pb_row_13.et_pb_row {
+					max-width: 82%
+				}
+				.et_pb_row_19,
+				body #page-container .et-db #et-boc .et-l .et_pb_row_19.et_pb_row,
+				body.et_pb_pagebuilder_layout.single #page-container #et-boc .et-l .et_pb_row_19.et_pb_row,
+				body.et_pb_pagebuilder_layout.single.et_full_width_page #page-container #et-boc .et-l .et_pb_row_19.et_pb_row {
+					max-width: 82%
+				}
+			}
+
 			
 
 			@media only screen and (max-width:767px) {
