--- a/public/da.html
+++ b/public/da.html
@@ -1419,7 +1419,8 @@
 				
 				.et_pb_section_11 {
 					/* fix min-height: 1140px */
-					min-height: 1240px
+					/* fix min-height: 1240px */
+					min-height: 1290px
 					/* bug min-height: 1340px */
 					/* bug min-height: 1540px */
 				}
