--- a/public/da.html
+++ b/public/da.html
@@ -1420,7 +1420,8 @@
 				.et_pb_section_11 {
 					/* fix min-height: 1140px */
 					/* fix min-height: 1240px */
-					min-height: 1265px
+					/* fix min-height: 1265px */
+					min-height: 1277px
 					/* bug min-height: 1290px */
 					/* bug min-height: 1340px */
 					/* bug min-height: 1540px */
