More da testing (temporary).

--- a/public/da.html
+++ b/public/da.html
@@ -1421,7 +1421,8 @@
 					/* fix min-height: 1140px */
 					/* fix min-height: 1240px */
 					/* fix min-height: 1265px */
-					min-height: 1277px
+					/* fix min-height: 1277px */
+					min-height: 1285px
 					/* bug min-height: 1290px */
 					/* bug min-height: 1340px */
 					/* bug min-height: 1540px */
