More da testing (temporary).

--- a/public/da.html
+++ b/public/da.html
@@ -1422,7 +1422,8 @@
 					/* fix min-height: 1240px */
 					/* fix min-height: 1265px */
 					/* fix min-height: 1277px */
-					min-height: 1279px
+					/* fix min-height: 1279px */
+					min-height: 1280px
 					/* bug min-height: 1281px */
 					/* bug min-height: 1285px */
 					/* bug min-height: 1290px */
