--- a/public/da.html
+++ b/public/da.html
@@ -1423,7 +1423,8 @@
 					/* fix min-height: 1265px */
 					/* fix min-height: 1277px */
 					/* fix min-height: 1279px */
-					min-height: 1280px
+					/* fix min-height: 1280px */
+					min-height: 1281px
 					/* bug min-height: 1281px */
 					/* bug min-height: 1285px */
 					/* bug min-height: 1290px */
