More da testing (temporary).

--- a/public/da.html
+++ b/public/da.html
@@ -300,7 +300,7 @@
 
 		<style type="text/css">
 			#prod-cat-section-container, #prod-landing-header {
-				min-height: 1px;
+				height: 100px;
 			}
 		</style>
 
