More da testing (temporary).

--- a/public/da.html
+++ b/public/da.html
@@ -303,6 +303,15 @@
 			#prod-cat-section-container, #prod-landing-header {
 				min-height: 100px;
 			}
+
+
+
+			div.et_pb_section_1, 
+			div.et_pb_section_16,
+			div.et_pb_section_11,
+			div.et_pb_section_6 {
+				min-height: 1040px
+			}
 		</style>
 
 
